# SunSip

./: .gitignore  README.md  __init__.py  __main__.py  factorial.txt  main.py  pyproject.toml  syntax.py  test
sunsip/: __init__.py  syntax.py
